--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -2,10 +2,11 @@ input {
 	size: 50px;
 }
 
-#result {
+#successMessage {
+  display: none;
+}
+
+#errorMessage {
 	display:none;
 }
 
-#signedUp {
-  display: none;
-}
